--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site wide configuration
 
-title: tomato firmwares mipsel
+title: freshTomato firmwares arm
 locale: en_US
 description: src-rt custom builds
 logo: kon.png
 search: true
-url: https://oglopss.github.io/tomato-ci-ctf-jekyll/
+url: https://oglopss.github.io/freshTomato-ARM-ci-jekyll/
 
 # Jekyll configuration
 
